<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:weightSum="1">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight=".03" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_weight=".94"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent">


            <LinearLayout
                android:id="@+id/camera_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_take_pic" />

                <TextView
                    android:id="@+id/take_photo_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/take_photo"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gallery_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/camera_layout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_gallery"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_gallery" />

                <TextView
                    android:id="@+id/gallery_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/gallery"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/view_photo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gallery_layout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_view_photo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_view_pic" />

                <TextView
                    android:id="@+id/view_photo_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:text="@string/view_photo"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
            <ImageView
                android:id="@+id/close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_close_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight=".03" />
</LinearLayout>
