<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/post_it"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/search_edittext"

            android:text="Post"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="HardcodedText,SpUsage" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/contentdescription"
            android:src="@drawable/ic_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="Add Shoot"
            android:textColor="@color/colorBlack"
            android:textSize="22dp"
            tools:ignore="HardcodedText,SpUsage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:id="@+id/pb"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/layoutcolor"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/pb">

                <EditText
                    android:id="@+id/post_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="16dp"
                    android:background="#0000"

                    android:hint="What's on your mind? #hastag @mentions..."
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxHeight="80dp"
                    android:textAlignment="viewStart"
                    android:textColor="?attr/textcolor"
                    android:textColorHint="?attr/textcolor"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="HardcodedText,SpUsage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView3"
                    android:importantForAutofill="no" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView3"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"

                        android:text="Ankit"
                        tools:ignore="HardcodedText,SpUsage"
                        android:textColor="?attr/textcolor"
                        android:textSize="19dp" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="10dp"
                        android:ellipsize="end"
                        android:text="Text"
                        tools:ignore="HardcodedText,SpUsage"
                        android:textColor="@color/editgrey"
                        android:textSize="16dp" />
                </RelativeLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/contentdescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/location_label"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_add_location_alt_24"
                app:startIconDrawable="@drawable/ic_baseline_my_location_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/content_language_spinner"
                    android:textColor="?colorOnSurface"
                    tools:ignore="RelativeOverlap" />

                <Spinner
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/private2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/privacy_switch" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments_switch" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
